force-app/main/default/objects/Serialized_Units__c/Serialized_Units__c.object-meta.xml
<CustomObject>
    <label>Serialized Unit</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serialized Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>