force-app/main/default/objects/Serialized_Units__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account related to this Serialized Unit</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Serialized Units</relationshipLabel>
    <relationshipName>R00N50000001eVUXEA2</relationshipName>
    <type>Lookup</type>
</CustomField>