force-app/main/default/objects/Serialized_Units__c/fields/Account_Correct__c.field-meta.xml
<CustomField>
    <fullName>Account_Correct__c</fullName>
    <formula>if (Account__r.QWBS_Cust_ID__c &lt;&gt; NMC_Account__r.Account__r.QWBS_Cust_ID__c, &quot;NO&quot;, &quot;YES&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Correct</label>
    <type>Text</type>
</CustomField>