force-app/main/default/objects/Serialized_Units__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>