force-app/main/default/objects/Serialized_Units__c/fields/Date_Unit_Moved__c.field-meta.xml
<CustomField>
    <fullName>Date_Unit_Moved__c</fullName>
    <inlineHelpText>Date the unit was added or transferred into the NMC account.</inlineHelpText>
    <label>Date Unit Moved</label>
    <type>Date</type>
</CustomField>