force-app/main/default/objects/Serialized_Units__c/fields/Days_Since_Unit_Moved__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Unit_Moved__c</fullName>
    <formula>TODAY() -  Date_Unit_Moved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the unit was added or transferred into the NMC account.</inlineHelpText>
    <label># Days Since Unit Moved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>