force-app/main/default/objects/Serialized_Units__c/fields/Firmware__c.field-meta.xml
<CustomField>
    <fullName>Firmware__c</fullName>
    <description>Increased field length from 10 to 20 due to actual data in load files. msilber 11-25-2008</description>
    <label>Firmware</label>
    <length>20</length>
    <type>Text</type>
</CustomField>