force-app/main/default/objects/Serialized_Units__c/fields/FirstRecord__c.field-meta.xml
<CustomField>
    <fullName>FirstRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used for Serialized Unit Updates when NMC Account is modified</description>
    <label>FirstRecord</label>
    <type>Checkbox</type>
</CustomField>