force-app/main/default/objects/Serialized_Units__c/fields/Fleet_Profile_Update__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Profile_Update__c</fullName>
    <label>Fleet Profile Update</label>
    <type>Date</type>
</CustomField>