force-app/main/default/objects/Serialized_Units__c/fields/Is_AOBRD__c.field-meta.xml
<CustomField>
    <fullName>Is_AOBRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOBRD?</label>
    <type>Checkbox</type>
</CustomField>