force-app/main/default/objects/Serialized_Units__c/fields/Is_AOBRD_Mode__c.field-meta.xml
<CustomField>
    <fullName>Is_AOBRD_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOBRD Mode?</label>
    <type>Checkbox</type>
</CustomField>