force-app/main/default/objects/Serialized_Units__c/fields/Is_ELD__c.field-meta.xml
<CustomField>
    <fullName>Is_ELD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ELD?</label>
    <type>Checkbox</type>
</CustomField>