force-app/main/default/objects/Serialized_Units__c/fields/Is_ELD_Capable__c.field-meta.xml
<CustomField>
    <fullName>Is_ELD_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ELD Capable?</label>
    <type>Checkbox</type>
</CustomField>