force-app/main/default/objects/Serialized_Units__c/fields/Last_Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Date__c</fullName>
    <description>Date value of the Last Message Date/Time field</description>
    <formula>DATEVALUE( Last_Message_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Message Date of the Serialized Unit</inlineHelpText>
    <label>Last Message Date</label>
    <type>Date</type>
</CustomField>