force-app/main/default/objects/Serialized_Units__c/fields/Last_Position_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Position_Date__c</fullName>
    <description>Date value from the Last Position Date/Time field</description>
    <formula>DATEVALUE( Last_Position_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Position Date of the Serialized Unit</inlineHelpText>
    <label>Last Position Date</label>
    <type>Date</type>
</CustomField>