force-app/main/default/objects/Serialized_Units__c/fields/Last_Position_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Position_Date_Time__c</fullName>
    <description>Last Position Date/Time. This field is set via the CEMS Serialized Unit interface. This field should not be displayed on any page layouts. Use the Last Position Date formula field instead.</description>
    <inlineHelpText>Last Position Date/Time. This field is set via the CEMS Serialized Unit interface.</inlineHelpText>
    <label>Last Position Date/Time</label>
    <type>DateTime</type>
</CustomField>