force-app/main/default/objects/Serialized_Units__c/fields/Last_System_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_System_Update__c</fullName>
    <label>Last System Update</label>
    <type>Date</type>
</CustomField>