force-app/main/default/objects/Serialized_Units__c/fields/LastRTDDate__c.field-meta.xml
<CustomField>
    <fullName>LastRTDDate__c</fullName>
    <description>Last RTD Date from the iQ / Oracle Fleet Profile interface</description>
    <inlineHelpText>For all products except OVM this value represents the Last Position Time. For OVM it represents the last Message Time. This value is updated via the iQ/Oracle Fleet Profile interface.</inlineHelpText>
    <label>Last RTD Date</label>
    <type>Date</type>
</CustomField>