force-app/main/default/objects/Serialized_Units__c/fields/NMC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Id__c</fullName>
    <formula>NMC_Account__r.Account__r.Id</formula>
    <label>NMC Account Id</label>
    <type>Text</type>
</CustomField>