force-app/main/default/objects/Serialized_Units__c/fields/NMC_Account_No__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_No__c</fullName>
    <description>NMC Account # from the associated NMC Account. This is a cross-object formula field.</description>
    <formula>NMC_Account__r.NMC_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMC Account #</label>
    <type>Text</type>
</CustomField>