force-app/main/default/objects/Serialized_Units__c/fields/NMC_State__c.field-meta.xml
<CustomField>
    <fullName>NMC_State__c</fullName>
    <label>NMC State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>