force-app/main/default/objects/Serialized_Units__c/fields/No_Days_Since_Last_Msg__c.field-meta.xml
<CustomField>
    <fullName>No_Days_Since_Last_Msg__c</fullName>
    <description>Number of days since the Last Message Date of the Serialized Unit. This is a formula field that calculates the number of days from Today to the Last Message Date.</description>
    <formula>TODAY() - Last_Message_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Last Message Date of the Serialized Unit</inlineHelpText>
    <label># Days Since Last Msg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>