force-app/main/default/objects/Serialized_Units__c/fields/No_Days_Since_Last_Pos__c.field-meta.xml
<CustomField>
    <fullName>No_Days_Since_Last_Pos__c</fullName>
    <formula>TODAY()- Last_Position_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the Last Postion Date of the Serialized Unit</inlineHelpText>
    <label># Days Since Last Pos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>