force-app/main/default/objects/Serialized_Units__c/fields/Old_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Item_Type__c</fullName>
    <label>Old Item Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>