force-app/main/default/objects/Serialized_Units__c/fields/On_Air__c.field-meta.xml
<CustomField>
    <fullName>On_Air__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Air</label>
    <type>Checkbox</type>
</CustomField>