force-app/main/default/objects/Serialized_Units__c/fields/OracleUnitStatus__c.field-meta.xml
<CustomField>
    <fullName>OracleUnitStatus__c</fullName>
    <description>Populated via the iQ/Fleet Profile interface.</description>
    <inlineHelpText>NMC Unit Status as shown in Oracle.</inlineHelpText>
    <label>Oracle Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>