force-app/main/default/objects/Serialized_Units__c/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <label>OS Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>