force-app/main/default/objects/Serialized_Units__c/fields/ProcessorSpeed__c.field-meta.xml
<CustomField>
    <fullName>ProcessorSpeed__c</fullName>
    <description>Processor Speed from the iQ/Oracle Fleet Profile interface.</description>
    <inlineHelpText>Processor Speed from the iQ/Oracle Fleet Profile interface.</inlineHelpText>
    <label>Processor Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>