force-app/main/default/objects/Serialized_Units__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>R00N50000001d4BdEAI</relationshipName>
    <type>Lookup</type>
</CustomField>