force-app/main/default/objects/Serialized_Units__c/fields/Product_Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Group__c</fullName>
    <description>Product Service Group from the iQ/Oracle Fleet Profile interface.</description>
    <inlineHelpText>Product Service Group from the iQ/Oracle Fleet Profile interface.</inlineHelpText>
    <label>Product Service Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACUS</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>GCUS</fullName>
            </value>
            <value>
                <fullName>GLCU</fullName>
            </value>
            <value>
                <fullName>MMAS</fullName>
            </value>
            <value>
                <fullName>OMAS</fullName>
            </value>
            <value>
                <fullName>OMMU</fullName>
            </value>
            <value>
                <fullName>T2MU</fullName>
            </value>
            <value>
                <fullName>TCUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>