force-app/main/default/objects/Serialized_Units__c/fields/Satellite_Capable__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satellite Capable</label>
    <type>Checkbox</type>
</CustomField>