force-app/main/default/objects/Serialized_Units__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <externalId>true</externalId>
    <label>Serial #</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>