force-app/main/default/objects/Serialized_Units__c/fields/Shipment_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Line</label>
    <referenceTo>Shipment_Line__c</referenceTo>
    <relationshipLabel>Serialized Units</relationshipLabel>
    <relationshipName>R00N50000001gClPEAU</relationshipName>
    <type>Lookup</type>
</CustomField>