force-app/main/default/objects/Serialized_Units__c/fields/Terrestrial_Capable__c.field-meta.xml
<CustomField>
    <fullName>Terrestrial_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terrestrial Capable</label>
    <type>Checkbox</type>
</CustomField>