force-app/main/default/objects/Serialized_Units__c/fields/TruckNumber__c.field-meta.xml
<CustomField>
    <fullName>TruckNumber__c</fullName>
    <description>Truck Number from the iQ/Oracle Fleet Profile interface.</description>
    <inlineHelpText>Truck Number from the iQ/Oracle Fleet Profile interface.</inlineHelpText>
    <label>Truck Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>