force-app/main/default/objects/Serialized_Units__c/fields/UA__c.field-meta.xml
<CustomField>
    <fullName>UA__c</fullName>
    <description>UA from CEMS</description>
    <inlineHelpText>UA from CEMS. UA is the Serial Number without the leading zeros.</inlineHelpText>
    <label>UA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>