force-app/main/default/objects/Serialized_Units__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Hidden field used to update Serialized Unit Summary counts</description>
    <formula>Account__c &amp;&apos;-&apos;&amp;TEXT( Item_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>