force-app/main/default/objects/Serialized_Units__c/fields/Unit_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Activation_Date__c</fullName>
    <description>Date field that is updated once the Unit State is set to Active (done through a workflow rule field update)</description>
    <label>Unit Activation Date</label>
    <type>Date</type>
</CustomField>