force-app/main/default/objects/Serialized_Units__c/fields/Unit_State__c.field-meta.xml
<CustomField>
    <fullName>Unit_State__c</fullName>
    <label>Unit State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>