force-app/main/default/objects/Serialized_Units__c/fields/UpdateFromNMC__c.field-meta.xml
<CustomField>
    <fullName>UpdateFromNMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used when NMC Account is changed</description>
    <label>UpdateFromNMC</label>
    <type>Checkbox</type>
</CustomField>