force-app/main/default/objects/Serialized_Units__c/fields/WIFI_Capable__c.field-meta.xml
<CustomField>
    <fullName>WIFI_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WIFI Capable</label>
    <type>Checkbox</type>
</CustomField>