force-app/main/default/objects/Serialized_Units__c/listViews/OVMUnits.listView-meta.xml
<ListView>
    <fullName>OVMUnits</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Unit_State__c</columns>
    <columns>Account__c</columns>
    <columns>NMC_State__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>OVM</value>
    </filters>
    <label>OVM Units</label>
    <language>en_US</language>
</ListView>