force-app/main/default/objects/Serialized_Units__c/listViews/SerializedUnitsCreatedLast7Days.listView-meta.xml
<ListView>
    <fullName>SerializedUnitsCreatedLast7Days</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Unit_State__c</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_State__c</columns>
    <columns>Last_Message_Date__c</columns>
    <columns>Last_Position_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Serialized Units Created Last 7 Days</label>
    <language>en_US</language>
</ListView>