force-app/main/default/objects/Serialized_Units__c/listViews/SerializedUnitsUpdatedToday.listView-meta.xml
<ListView>
    <fullName>SerializedUnitsUpdatedToday</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Unit_State__c</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_State__c</columns>
    <columns>Last_Message_Date__c</columns>
    <columns>Last_Position_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>3/8/2018 9:00 AM</value>
    </filters>
    <label>Serialized Units Updated Today</label>
    <language>en_US</language>
</ListView>