force-app/main/default/objects/Serialized_Units__c/listViews/SerializedUnitsWithNoLastMsgDate.listView-meta.xml
<ListView>
    <fullName>SerializedUnitsWithNoLastMsgDate</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Unit_State__c</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_State__c</columns>
    <columns>Last_Message_Date__c</columns>
    <columns>Last_Position_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Message_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Serialized Units With No Last Msg Date</label>
    <language>en_US</language>
</ListView>