force-app/main/default/objects/Serialized_Units__c/listViews/SerializedUnitsWithoutAccount.listView-meta.xml
<ListView>
    <fullName>SerializedUnitsWithoutAccount</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item_ID__c</columns>
    <columns>Unit_State__c</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_State__c</columns>
    <columns>Last_Message_Date__c</columns>
    <columns>Last_Position_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Serialized Units Without Account</label>
    <language>en_US</language>
</ListView>